--- a/Notes/Machine Learning - Week 2.ipynb
+++ b/Notes/Machine Learning - Week 2.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "**Gradient Descent Algorithm:**\n",
     "\n",
-    "$\\text{repeat } \\{$\n",
+    "$\\text{Repeat } \\{$\n",
     "\n",
     "&emsp;$ \\theta_j := \\theta_j - \\alpha \\frac{\\partial}{\\partial \\theta_j}J(\\theta) \\space \\space \\leftrightarrow \\space \\space \\theta_j := \\theta_j - \\alpha \\frac{1}{m} \\sum_{i=1}^m (h_\\theta(x^{(i)}) - y^{(i)}) \\cdot x_j^{(i)}$\n",
     "\n",
