Finished logistic regression algorithm with regularization

--- a/Notes/Machine Learning - Week 3.ipynb
+++ b/Notes/Machine Learning - Week 3.ipynb
@@ -238,6 +238,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://medium.com/ml-ai-study-group/vectorized-implementation-of-cost-functions-and-gradient-vectors-linear-regression-and-logistic-31c17bca9181"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
