Tentatively finished week 4

--- a/Notes/Machine Learning - Week 4.ipynb
+++ b/Notes/Machine Learning - Week 4.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "$z^{(2)} = \\theta^{(1)}x = \\theta^{(1)}a^{(1)}$ by considering the input layer $x = a^{(1)}$\n",
     "\n",
-    "$a^{(2)} = g(z^{(2)})$ where both $a^{(2)}$ and $z^{(2)}$ are 3d vectors ($\\mathbb{R}^3$)\n",
+    "$a^{(2)} = g(z^{(2)})$ where both $a^{(2)}$ and $z^{(2)}$ are 3D vectors ($\\mathbb{R}^3$)\n",
     "\n",
     "Add $a_0^{(2)} = 1 \\rightarrow a_0^{(2)} \\in \\mathbb{R}^4$\n",
     "\n",
@@ -73,6 +73,17 @@
     "\n",
     "**Final Vectorized Forward Propagation:**\n",
     "$h_\\theta(x) = a^{(3)} = g(z^{(3)})$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiclass Classification\n",
+    "\n",
+    "Where $x^{(i)}$ represents an input image, $y^{(i)}$ represents the output neurons, one of:\n",
+    "\n",
+    "Pedestrian $\\begin{bmatrix} 1 \\\\ 0 \\\\ 0 \\\\ 0 \\end{bmatrix}$, Car $\\begin{bmatrix} 0 \\\\ 1 \\\\ 0 \\\\ 0 \\end{bmatrix}$, Motorcycle $\\begin{bmatrix} 0 \\\\ 0 \\\\ 1 \\\\ 0 \\end{bmatrix}$, Truck $\\begin{bmatrix} 0 \\\\ 0 \\\\ 0 \\\\ 1 \\end{bmatrix}$\n"
    ]
   },
   {
